--- a/Nueva carpeta (2)/src/components/body/DataList.css
+++ b/Nueva carpeta (2)/src/components/body/DataList.css
@@ -1,6 +1,25 @@
 /* DataList.css */
-#home{
+#input{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: calc(100% - 20px);
+  background-color: #bdb1b1;
+  z-index: 1000; 
+  padding: 10px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  
+}
+#h{
   width: 100%;
+}
+.nav-buttons {
+  padding-top: 50px; 
+}
+#home{
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 5px;
 }
 #init{
   width: 100%;
@@ -54,7 +73,7 @@
 }
 
 body {
-  background-image: url('../img/nismo.jpg'); /* Reemplaza 'ruta/a/tu/imagen.jpg' con la ruta a tu imagen */
+  background-color: #888; /* Reemplaza 'ruta/a/tu/imagen.jpg' con la ruta a tu imagen */
   background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
   background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace con el contenido */
